Update contact information and paragraph content

--- a/index.html
+++ b/index.html
@@ -59,15 +59,19 @@
 
     <h1>Southern Layers 3D Printing</h1>
 
-    <p>
-      Custom 3D printing, prototyping, and small-batch production.
-      If you have an idea, a broken part, or a project you want brought to life, we can print it.
-    </p>
+<p>
+  Custom 3D printing, prototyping, and small-batch production.
+  If you have an idea or a project you want brought to life, we can print it.
+</p>
 
-    <p class="contact">
-      Contact: <br>
-      <strong>southernlayers3d@gmail.com</strong>
-    </p>
+
+<p class="contact">
+  Contact: <br>
+  <a href="mailto:support@sl3dprinting.com" style="color:#1ed0f3; text-decoration:none;">
+    <strong>support@sl3dprinting.com</strong>
+  </a>
+</p>
+
   </div>
 </body>
 </html>
