--- a/index.html
+++ b/index.html
@@ -4,79 +4,108 @@
   <meta charset="UTF-8">
   <title>Southern Layers 3D Printing</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      margin: 0;
-      background: #0f1a20;
-      font-family: Arial, Helvetica, sans-serif;
-      color: #fff;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-    }
+  body {
+  margin: 0;
+  background: radial-gradient(circle at top, #1a2b35 0%, #0f1a20 70%);
+  font-family: Arial, Helvetica, sans-serif;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  overflow: hidden;
+}
 
 .card {
   background: rgba(0,0,0,0.75);
-  padding: 40px;
+  padding: 32px 36px;
   border-radius: 18px;
   max-width: 520px;
   text-align: center;
-  box-shadow: 0 0 40px rgba(249,196,6,0.15), 0 20px 60px rgba(0,0,0,0.7);
+  box-shadow: 0 0 40px rgba(249,196,6,0.18), 0 20px 60px rgba(0,0,0,0.8);
   animation: float 6s ease-in-out infinite;
 }
 
 @keyframes float {
-  0%   { transform: translateY(0px); }
-  50%  { transform: translateY(-8px); }
+  0% { transform: translateY(0px); }
+  50% { transform: translateY(-8px); }
   100% { transform: translateY(0px); }
 }
 
+.logo {
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 10px;
+  border: 4px solid #f9c406;
+}
 
-    .logo {
-      width: 220px;
-      height: 220px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin-bottom: 24px;
-      border: 4px solid #f9c406;
-    }
+.gear {
+  width: 46px;
+  height: 46px;
+  border: 6px solid #f9c406;
+  border-top: 6px solid transparent;
+  border-radius: 50%;
+  margin: 10px auto 14px;
+  animation: spin 2s linear infinite;
+}
 
-    h1 {
-      margin: 10px 0;
-      font-size: 28px;
-      color: #f9c406;
-    }
+@keyframes spin {
+  100% { transform: rotate(360deg); }
+}
 
-    p {
-      line-height: 1.6;
-      font-size: 16px;
-      opacity: 0.9;
-    }
+.badge {
+  display: inline-block;
+  padding: 6px 16px;
+  border-radius: 999px;
+  background: linear-gradient(90deg, #f9c406, #ffdf6a);
+  color: #000;
+  font-weight: bold;
+  font-size: 12px;
+  margin-bottom: 10px;
+}
 
-    .contact {
-      margin-top: 20px;
-      font-size: 18px;
-      color: #1ed0f3;
-    }
-  </style>
+h1 {
+  margin: 8px 0 6px;
+  font-size: 26px;
+  color: #f9c406;
+}
+
+.subline {
+  font-size: 14px;
+  color: #bbb;
+  margin-bottom: 12px;
+}
+
+p {
+  line-height: 1.5;
+  font-size: 15px;
+  opacity: 0.9;
+  margin: 10px 0;
+}
+
+.contact {
+  margin-top: 14px;
+  font-size: 17px;
+  color: #1ed0f3;
+}
+
 </head>
 <body>
   <div class="card">
-    <img src="logo.png" alt="Southern Layers 3D Printing" class="logo">
+   <img src="logo.png" alt="Southern Layers 3D Printing" class="logo">
 
-<div style="
-  display:inline-block;
-  padding:6px 14px;
-  border-radius:999px;
-  background:#f9c406;
-  color:#000;
-  font-weight:bold;
-  font-size:12px;
-  margin-bottom:14px;
-">
-  Website in progress
+<div class="gear"></div>
+
+<div class="badge">Printing in progress</div>
+
+<h1>Southern Layers 3D Printing</h1>
+
+<div class="subline">
+  We are currently calibrating our printers and finishing this site.
 </div>
+
 
     
     <h1>Southern Layers 3D Printing</h1>
