--- a/decor.html
+++ b/decor.html
@@ -222,6 +222,27 @@
               </p>
             </div>
           </div>
+
+<!-- Product 8 -->
+<div class="product-card">
+  <div
+    class="product-image"
+    style="background-image: url('client-assets/Grinch_Hand.png')"
+  >
+    <div class="product-overlay">
+      <span class="pun-label">Stealing hearts, not Christmas 🎄</span>
+    </div>
+  </div>
+  <div class="product-info">
+    <h3>Grinch Hand Decor</h3>
+    <p>
+      Playful holiday decor piece inspired by a classic holiday character.
+      Perfect for seasonal displays, gifts, or themed collections.
+    </p>
+  </div>
+</div>
+
+          
         </div>
       </section>
 
@@ -256,3 +277,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
