Redeploy displays.html with updated structure

--- a/displays.html
+++ b/displays.html
@@ -24,6 +24,8 @@
         <img src="client-assets/SL3D_logo.jpg" alt="Southern Layers Logo" />
         <strong>Southern Layers 3D Printing</strong>
       </div>
+      <button class="nav-toggle" aria-label="Toggle navigation">☰</button>
+
       <nav>
         <a href="SL3DP.html#home">Home</a>
         <a href="SL3DP.html#gallery">Gallery</a>
@@ -205,3 +207,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
