Redeploy decor.html with updated content

--- a/decor.html
+++ b/decor.html
@@ -63,6 +63,9 @@
       />
     </svg>
 
+<canvas id="nozzle-trail"></canvas>
+
+    
     <main>
       <!-- Breadcrumb -->
       <nav class="breadcrumb">
@@ -280,6 +283,7 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
 
