added nozzle trail

--- a/displays.html
+++ b/displays.html
@@ -62,6 +62,8 @@
       />
     </svg>
 
+<canvas id="nozzle-trail"></canvas>
+    
     <main>
       <!-- Breadcrumb -->
       <nav class="breadcrumb">
@@ -207,4 +209,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
