added nozzle trail

--- a/gifts.html
+++ b/gifts.html
@@ -62,6 +62,8 @@
       />
     </svg>
 
+    <canvas id="nozzle-trail"></canvas>
+
     <main>
       <!-- Breadcrumb -->
       <nav class="breadcrumb">
@@ -319,4 +321,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
