--- a/decor.html
+++ b/decor.html
@@ -28,9 +28,9 @@
    <button class="nav-toggle" aria-label="Toggle navigation">☰</button>
 
       <nav>
-        <a href="SL3DP.html#home">Home</a>
-        <a href="SL3DP.html#gallery">Gallery</a>
-        <a href="SL3DP.html#contact">Contact</a>
+        <a href="index.html#home">Home</a>
+        <a href="index.html#gallery">Gallery</a>
+        <a href="index.html#contact">Contact</a>
       </nav>
     </header>
 
@@ -69,8 +69,8 @@
     <main>
       <!-- Breadcrumb -->
       <nav class="breadcrumb">
-        <a href="SL3DP.html">Home</a> /
-        <a href="SL3DP.html#gallery">Gallery</a> /
+        <a href="index.html">Home</a> /
+        <a href="index.html#gallery">Gallery</a> /
         <span>Decor & Collectibles</span>
       </nav>
 
@@ -268,7 +268,7 @@
             ideas to life.
           </p>
           <a
-            href="SL3DP.html#contact"
+            href="index.html#contact"
             class="cta"
             style="background: #fff; color: #000"
           >
@@ -283,6 +283,7 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
 
