--- a/gifts.html
+++ b/gifts.html
@@ -27,9 +27,9 @@
       <button class="nav-toggle" aria-label="Toggle navigation">☰</button>
 
       <nav>
-        <a href="SL3DP.html#home">Home</a>
-        <a href="SL3DP.html#gallery">Gallery</a>
-        <a href="SL3DP.html#contact">Contact</a>
+        <a href="index.html#home">Home</a>
+        <a href="index.html#gallery">Gallery</a>
+        <a href="index.html#contact">Contact</a>
       </nav>
     </header>
 
@@ -67,8 +67,8 @@
     <main>
       <!-- Breadcrumb -->
       <nav class="breadcrumb">
-        <a href="SL3DP.html">Home</a> /
-        <a href="SL3DP.html#gallery">Gallery</a> /
+        <a href="index.html">Home</a> /
+        <a href="index.html#gallery">Gallery</a> /
         <span>Gifts & Miniatures</span>
       </nav>
 
@@ -306,7 +306,7 @@
             one-of-a-kind gifts.
           </p>
           <a
-            href="SL3DP.html#contact"
+            href="index.html#contact"
             class="cta"
             style="background: #fff; color: #000"
           >
@@ -321,5 +321,6 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
