--- a/sports.html
+++ b/sports.html
@@ -27,9 +27,9 @@
       <button class="nav-toggle" aria-label="Toggle navigation">☰</button>
 
       <nav>
-        <a href="SL3DP.html#home">Home</a>
-        <a href="SL3DP.html#gallery">Gallery</a>
-        <a href="SL3DP.html#contact">Contact</a>
+        <a href="index.html#home">Home</a>
+        <a href="index.html#gallery">Gallery</a>
+        <a href="index.html#contact">Contact</a>
       </nav>
     </header>
 
@@ -61,12 +61,14 @@
         d="M 0,400 C 150,380 250,420 400,400 S 650,380 800,400 S 1050,420 1200,400"
       />
     </svg>
-
+    
+<canvas id="nozzle-trail"></canvas>
+    
     <main>
       <!-- Breadcrumb -->
       <nav class="breadcrumb">
-        <a href="SL3DP.html">Home</a> /
-        <a href="SL3DP.html#gallery">Gallery</a> /
+        <a href="index.html">Home</a> /
+        <a href="index.html#gallery">Gallery</a> /
         <span>Sports Memorabilia</span>
       </nav>
 
@@ -208,7 +210,7 @@
             project.
           </p>
           <a
-            href="SL3DP.html#contact"
+            href="index.html#contact"
             class="cta"
             style="background: #fff; color: #000"
           >
@@ -223,4 +225,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
