--- a/gifts.html
+++ b/gifts.html
@@ -21,7 +21,7 @@
     <header>
       <div class="header-progress"></div>
       <div style="display: flex; align-items: center; gap: 1rem">
-        <img src="client-assets/SL3D_logo.jpg" alt="Southern Layers Logo" />
+        <img src="client-assets/sl3d_logo.png" alt="Southern Layers Logo" />
         <strong>Southern Layers 3D Printing</strong>
       </div>
       <button class="nav-toggle" aria-label="Toggle navigation">☰</button>
@@ -321,6 +321,7 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
 
