--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
       <div class="header-progress"></div>
       <div style="display: flex; align-items: center; gap: 1rem">
-        <img src="client-assets\SL3D_logo.jpg" alt="Southern Layers Logo" />
+        <img src="client-assets\sl3d_logo.png" alt="Southern Layers Logo" />
         <strong>Southern Layers 3D Printing</strong>
       </div>
 
@@ -101,31 +101,31 @@
         <div class="hero-visual" style="perspective: 800px">
           <div class="printing-logo">
             <img
-              src="client-assets\SL3D_logo.jpg"
+              src="client-assets\sl3d_logo.png"
               alt="Southern Layers Logo"
               class="logo-layer"
               style="--layer: 0"
             />
             <img
-              src="client-assets\SL3D_logo.jpg"
+              src="client-assets\sl3d_logo.png"
               alt=""
               class="logo-layer"
               style="--layer: 1"
             />
             <img
-              src="client-assets\SL3D_logo.jpg"
+              src="client-assets\sl3d_logo.png"
               alt=""
               class="logo-layer"
               style="--layer: 2"
             />
             <img
-              src="client-assets\SL3D_logo.jpg"
+              src="client-assets\sl3d_logo.png"
               alt=""
               class="logo-layer"
               style="--layer: 3"
             />
             <img
-              src="client-assets\SL3D_logo.jpg"
+              src="client-assets\sl3d_logo.png"
               alt=""
               class="logo-layer"
               style="--layer: 4"
@@ -390,4 +390,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
