--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     <header>
       <div class="header-progress"></div>
       <div style="display: flex; align-items: center; gap: 1rem">
-        <img src="client-assets\sl3d_logo.png" alt="Southern Layers Logo" />
-        <strong>Southern Layers 3D Printing</strong>
-      </div>
+<div class="brand">
+  <img src="client-assets/sl3d_logo.png" alt="Southern Layers Logo" />
+  <strong>Southern Layers 3D Printing</strong>
+</div>
+
 
       <button class="nav-toggle" aria-label="Toggle navigation">☰</button>
 
@@ -390,5 +392,6 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
