--- a/displays.html
+++ b/displays.html
@@ -21,9 +21,10 @@
     <header>
       <div class="header-progress"></div>
       <div style="display: flex; align-items: center; gap: 1rem">
-        <img src="client-assets/sl3d_logo.png" alt="Southern Layers Logo" />
-        <strong>Southern Layers 3D Printing</strong>
-      </div>
+<div class="brand">
+  <img src="client-assets/sl3d_logo.png" alt="Southern Layers Logo" />
+  <strong>Southern Layers 3D Printing</strong>
+</div></div>
       <button class="nav-toggle" aria-label="Toggle navigation">☰</button>
 
       <nav>
@@ -209,6 +210,7 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
 
