--- a/index.html
+++ b/index.html
@@ -16,23 +16,31 @@
   </head>
 
   <body>
-    <header>
-      <div class="header-progress"></div>
-      <div style="display: flex; align-items: center; gap: 1rem">
-<div class="brand">
-  <img src="client-assets/sl3d_logo.png" alt="Southern Layers Logo" />
-  <strong>Southern Layers 3D Printing</strong>
-</div>
+   <header class="site-header">
+  <div class="header-progress"></div>
 
+  <div class="header-inner">
+    <!-- Brand -->
+    <div class="brand">
+      <img
+        src="client-assets/sl3d_logo.png"
+        alt="Southern Layers 3D Printing logo"
+      />
+      <strong>Southern Layers 3D Printing</strong>
+    </div>
 
-      <button class="nav-toggle" aria-label="Toggle navigation">☰</button>
+    <!-- Mobile toggle -->
+    <button class="nav-toggle" aria-label="Toggle navigation">☰</button>
 
-      <nav>
-        <a href="#home">Home</a>
-        <a href="#gallery">Gallery</a>
-        <a href="#contact">Contact</a>
-      </nav>
-    </header>
+    <!-- Navigation -->
+    <nav class="main-nav">
+      <a href="#home">Home</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </div>
+</header>
+
 
     <!-- Background effects -->
     <div class="layer-lines"></div>
@@ -392,6 +400,7 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
 
