--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
 
-  <body>
+  <body id="top">
     <header class="site-header">
       <div class="header-progress"></div>
 
@@ -51,7 +51,7 @@
 
       <!-- Slide-out menu -->
       <nav class="main-nav">
-        <a href="index.html#home">Home</a>
+        <a href="index.html#top">Home</a>
         <a href="index.html#gallery">Gallery</a>
         <a href="index.html#contact">Contact</a>
       </nav>
@@ -100,8 +100,8 @@
 
     <canvas id="nozzle-trail"></canvas>
 
-    <main>
-      <section id="home" class="hero">
+    <main id="home">
+      <section class="hero">
         <div>
           <h1>Precision 3D Printing,<br />Layer by Layer</h1>
           <p>
