--- a/index.html
+++ b/index.html
@@ -4,6 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Southern Layers 3D Printing</title>
+    <!-- Primary SEO -->
+    <meta
+      name="description"
+      content="Southern Layers 3D Printing (South Carolina) provides high-quality bulk 3D printing for keychains, necklaces, promotional items, and custom designs. Request a quote today."
+    />
+    <link rel="canonical" href="https://sl3dprinting.com/" />
+
+    <!-- Robots (indexing control) -->
+    <meta name="robots" content="index,follow,max-image-preview:large" />
+
+    <!-- Open Graph (Facebook/LinkedIn) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Southern Layers 3D Printing" />
+    <meta
+      property="og:description"
+      content="High-quality bulk 3D printing in South Carolina — custom promotional items, keychains, displays, and more."
+    />
+    <meta property="og:url" content="https://sl3dprinting.com/" />
+    <meta
+      property="og:image"
+      content="https://sl3dprinting.com/client-assets/sl3d_logo.png"
+    />
+
+    <!-- Twitter/X -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Southern Layers 3D Printing" />
+    <meta
+      name="twitter:description"
+      content="High-quality bulk 3D printing in South Carolina — custom promotional items, keychains, displays, and more."
+    />
+    <meta
+      name="twitter:image"
+      content="https://sl3dprinting.com/client-assets/og-image.jpg"
+    />
 
     <!-- Favicon -->
     <link rel="icon" href="client-assets/favicon.ico" sizes="any" />
@@ -29,6 +63,19 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Southern Layers 3D Printing, LLC",
+        "url": "https://sl3dprinting.com/",
+        "email": "mailto:Support@SL3DPrinting.com",
+        "telephone": "+1-803-696-7650",
+        "areaServed": "South Carolina",
+        "description": "High-quality bulk 3D printing for promotional items, keychains, necklaces, displays, and custom designs.",
+        "image": "https://sl3dprinting.com/client-assets/og-image.jpg"
+      }
+    </script>
   </head>
 
   <body id="top">
@@ -207,9 +254,7 @@
           <p style="font-size: 1.1rem">
             Tell us what you need and we'll quote it.
           </p>
-          <a href="#contact" class="cta" style="background: #fff; color: #000"
-            >Request a Quote</a
-          >
+          <a href="#contact" class="cta cta--white">Request a Quote</a>
         </div>
       </section>
 
@@ -341,7 +386,7 @@
               </div>
             </div>
 
-            <button type="submit" class="submit" id="submit-btn">
+            <button type="submit" class="submit submit--cta" id="submit-btn">
               Send Quote Request
             </button>
 
@@ -349,9 +394,13 @@
           </form>
 
           <p style="margin-top: 2rem">
-            <strong>Rob or Tina Tipton</strong><br />
-            Support@SL3DPrinting.com<br />
-            803-696-7650
+            <strong>Southern Layers 3D Printing</strong><br />
+            <a href="mailto:support@sl3dprinting.com"
+              >support@sl3dprinting.com</a
+            ><br />
+            <span style="opacity: 0.85"
+              >Local, veteran-owned shop in South Carolina.</span
+            >
           </p>
         </div>
       </section>
