--- a/sports.html
+++ b/sports.html
@@ -4,7 +4,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sports Memorabilia | Southern Layers 3D Printing</title>
+    <title>Sports Memorabilia 3D Printing | Southern Layers</title>
+    <meta
+      name="description"
+      content="Custom 3D printed sports memorabilia and team promo items — keychains, displays, mascots, and bulk orders."
+    />
+    <link rel="canonical" href="https://sl3dprinting.com/sports.html" />
 
     <!-- Favicon -->
     <link rel="icon" href="client-assets/favicon.ico" sizes="any" />
