--- a/displays.html
+++ b/displays.html
@@ -4,7 +4,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Displays & Organizers | Southern Layers 3D Printing</title>
+    <title>Displays & Organizers 3D Printing | Southern Layers</title>
+    <meta
+      name="description"
+      content="Custom 3D printed displays and organizers — keychains, displays, mascots, and bulk orders."
+    />
+    <link rel="canonical" href="https://sl3dprinting.com/displays.html" />
 
     <!-- Favicon -->
     <link rel="icon" href="client-assets/favicon.ico" sizes="any" />
